Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.15.6
-
Fix Version/s: 5.15.7, 6.2.1, 6.3.0 Alpha
-
Component/s: Build tools: qmake
-
Labels:None
-
Platform/s:
-
Commits:b5a23e88be0dd8cb6c66010c92c495c20c455325 (qt/qtbase/dev) 098883d0689de39ce79ebaa49f160d39b6adea73 (qt/qtbase/6.2) 56a2a0f21affff66653c457f24fe72e89b7a2af3 (qt/tqtc-qtbase/5.15)
Description
If you set OBJECTS_DIR in your qmake project and use Xcode output, "xcodebuild clean" now fails because the output directory specified was created by qmake, not Xcode.
This is a regression from 5.15.5.
Xcode appears to be looking for the extended attribute com.apple.xcode.CreatedByBuildSystem and won't remove the build output without it.
test.pro:
TARGET = app TEMPLATE = app SOURCES += main.cpp CONFIG += c++11 OBJECTS_DIR = build
qmake:
$ ~/dev/Qt5.15.6/5.15.6/clang_64/bin/qmake -spec macx-xcode
xcodebuild clean:
$ xcodebuild clean
Command line invocation:
/Applications/Xcode.app/Contents/Developer/usr/bin/xcodebuild clean
User defaults from command line:
IDEPackageSupportUseBuiltinSCM = YES
note: Using new build system
error: Could not delete `/Users/hamish/dev/test/qmake/build` because it was not created by the build system.
error: Could not delete `/Users/hamish/dev/test/qmake/build` because it was not created by the build system.
note: Build preparation complete
** CLEAN FAILED **